# esp-hal

./: Cargo.toml
esp-backtrace/: CHANGELOG.md
esp-backtrace/src/: lib.rs
esp-bootloader/: Cargo.toml  README.md
esp-bootloader/src/: main.rs
esp-bootloader/tools/: memory_s3.py
esp-hal/: CHANGELOG.md  Cargo.toml  build.rs
esp-hal-common/src/: i2c.rs  spi.rs  uart.rs  usb_serial_jtag.rs
esp-hal-common/src/analog/: mod.rs
esp-hal-common/src/analog/adc/: xtensa.rs
esp-hal-common/src/efuse/: esp32s3.rs
esp-hal-common/src/mcpwm/: mod.rs  operator.rs
esp-hal-common/src/soc/: mod.rs
esp-hal-common/src/soc/esp32s2/: efuse.rs
esp-hal-common/src/twai/: mod.rs
esp-hal/ld/esp32s3/: bootloader.x  bootloader_memory.x  rom-functions.x
esp-hal/src/: lib.rs  usb_serial_jtag.rs
esp-hal/src/analog/adc/: xtensa.rs
esp-hal/src/interrupt/: xtensa.rs
esp-hal/src/soc/esp32s3/: mod.rs
xtask/src/: lib.rs  main.rs
xtensa-lx-rt/src/: lib.rs
