[package]
name = "esp-bootloader"
version = "0.1.0"
edition = "2021"
rust-version = "1.76.0"
description = "2nd stage bootloader for for Espressif devices"
repository = "https://github.com/esp-rs/esp-hal"
license = "MIT OR Apache-2.0"

[dependencies]
esp-hal = { version = "0.21.0", path = "../esp-hal", default-features = false }
esp-println = {path = "../esp-println", features = ["esp32s3"]}
esp-hal-ota = "0.1.3"
r0 = "1.0.0"

[build-dependencies]
esp-build = { version = "0.1.0", path = "../esp-build" }
esp-metadata = { version = "0.4.0", path = "../esp-metadata" }

[features]
default = ["esp32s3"]
# You must enable exactly one of the below features to support the correct chip:
esp32 = ["esp-hal/esp32"]
esp32c2 = ["esp-hal/esp32c2"]
esp32c3 = ["esp-hal/esp32c3"]
esp32c6 = ["esp-hal/esp32c6"]
esp32h2 = ["esp-hal/esp32h2"]
esp32s2 = ["esp-hal/esp32s2"]
esp32s3 = ["esp-hal/esp32s3"]
